--- a/client/frontend/src/components/Home.css
+++ b/client/frontend/src/components/Home.css
@@ -1,9 +1,3 @@
-/* .mainDiv {
-  background-image: linear-gradient(#8360C3, #2EBF91);
-  width: 100vw;
-  height :  100vh;
-  position: relative;
-} */
 .upperCard {
   height: 30vh;
   width: 100vw;
@@ -11,9 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.upperCard TextField {
-  width: 60%;
 }
 
 .container {
@@ -24,7 +15,6 @@
   align-content: space-between;
   row-gap: 10px;
   font-size: 20px;
-  /* background-color: black; */
 }
 .listCard {
   width: 60%;
@@ -36,11 +26,10 @@
   text-align: left;
 }
 
-/* .listCard {
-  border-bottom : 1px solid black;
-  border-radius: 8%;
-  margin: auto;
-  margin-bottom: 0.3em;
-  width: 70%;
-  height : 5%
-} */
+.todoinput {
+  border: none;
+  background: none;
+  font-weight: 550;
+  opacity: 1;
+  font-size: 20px;
+}
