--- a/client/frontend/src/components/Home.css
+++ b/client/frontend/src/components/Home.css
@@ -1,7 +1,8 @@
 .upperCard {
   height: 30vh;
   width: 100vw;
-  background-color: aliceblue;
+  background-image: url('https://wallpaperaccess.com/full/84248.png');
+  /* background-color: aliceblue; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,11 +17,15 @@
   row-gap: 10px;
   font-size: 20px;
 }
+
 .listCard {
   width: 60%;
   height: 3em;
-  border: .5px solid brown;
+  border: .5px solid rgb(167, 19, 19);
+  /* background-image: url('https://www.momooze.com/wp-content/uploads/minimalist-aesthetic-desktop-wallpaper41.jpg'); */
+  background: aliceblue;
 }
+
 .listcardBody {
   padding: .8rem;
   text-align: left;
